[package]
name = "satisfactory-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive", "env"] }
