[package]
name = "satisfactory-exporter"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A Prometheus exporter for the game Satisfactory."
repository = "https://github.com/dwmunster/satisfactory-exporter"
homepage = "https://github.com/dwmunster/satisfactory-exporter"
readme = "README.md"
keywords = ["prometheus", "exporter", "satisfactory"]
categories = ["command-line-utilities", "network-programming"]
authors = ["Drayton Munster <drayton@munster.dev>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive", "env"] }
